/*
 * $Id: ChangeLog,v 1.2415 2004/02/28 00:39:15 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-02-28 10:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/hbzlib/include/hbzip2.h
  * contrib/hbzlib/zipcomp.cpp
  * contrib/hbzlib/zipnew.cpp
    - remove function hb_CompressFileStd()
    - remove function hb_CmpTdSpanStd()
    - remove function hb_CmpPkSpanStd()

  * contrib/hbzlib/zip.c
    % enhanced and simplified zip surface functions
    % HB_ZIPFILE now accept wild cards for files to be zipped

2004-02-28 03:30 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Fixed Animate and Trace behaviour.

2004-02-28 05:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapifs.h
  * source/rtl/direct.c
    + PHB_ITEM hb_fsDirectory( char*, char*, BOOL, BOOL ) for access
      from C level.
    % make Directory() function to call hb_directory()

  * include/hbserv.h
  * source/rtl/hbserv.c
    ! fixes on function declaration.

2004-02-27 23:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    ! minor correction on previous changes when skleton passed is "*.*"

2004-02-27 23:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    ! allow Directory() to receive third parameter as logical so that
      Directory() will only returns directory names. Default is FALSE.
      Example: Directory("C:\Windows\*.*",,.T.)

    ! allow Directory() to receive fourth parameter as logical so that
      Directory() will return file/directory names with full-path.
      Default is FALSE.
      Example: Directory("C:\Windows\*.*",,,.T.)

      NOTE: These are xHarbour extensions.

  + tests/dirtest2.prg
    ! test program for extended directory() function

  * source/rdd/dbcmd.c
    ! fix memory leak upon succesful operation of: